# File-Search

./: .env  .gitignore  Procfile  README.md  app.py  file_search.py  kg_agents.py  main.py  ocr_engine.py  pyproject.toml
templates/: index.html
