[project]
name = "file-search-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "google-genai>=1.52.0",
    "python-dotenv>=1.0.0",
    "gunicorn",
    "camel-ai>=0.2.80",
    "unstructured[pdf]>=0.18.21",
    "neo4j>=6.0.3",
    "pymupdf>=1.26.6",
    "google-generativeai>=0.8.5",
    "numpy>=2.3.5",
    "pillow>=10.4.0"
]
